syntax = "proto3";
package pb;

option go_package = "github.com/QzSG/lapis-uno/protobuf;pb";

service Sensor {
    // Sends a greeting
    rpc ReadingStream (stream Reading) returns (stream Reply) {}
}

message Reply {
    int32 status = 1;
}

message Reading {
    //Field types are in Go|Python3|C++

    // Indicates if it is the start of a move : *bool|bool|bool
    bool isStartMove = 1;

    // To identify the clients : *string|str|string
    string clientID = 2;

    // Initial assigned dancer number : int32, int, int32
    int32 dancerNo = 3;

    // Position change of client : int32, int, int32
    int32 posChange = 4;
 
    // Accelerometer X Axis value : *float64|float|double
    double accX = 5;
    // Accelerometer Y Axis value : *float64|float|double
    double accY = 6;
    // Accelerometer Z Axis value : *float64|float|double
    double accZ = 7;

    // Gyroscope Roll value : *float64|float|double
    double gyroRoll = 8;
    // Gyroscope Pitch value : *float64|float|double
    double gyroPitch = 9;
    // Gyroscope Yaw value : *float64|float|double
    double gyroYaw = 10;

    // Timestamp in unix nanoseconds : *int64|int/long/int64 
    int64 timeStamp = 11;
}